--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,40 +13,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    
-    - name: Install dependencies
-      run: npm install
-    
     - name: Build project
-      run: npm run build
-    
-    - name: Archive artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: website
-        path: dist
-    
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    
-    - name: Download artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: website
-        path: dist
+      run: |
+        # Add build commands here
+        echo "Building the project..."
+        npm install
+        npm run build
     
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.0
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        branch: gh-pages
-        folder: dist
-
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
